my second websit login website

--- a/forcss2.css
+++ b/forcss2.css
@@ -47,3 +47,9 @@ input{
     text-align: center;
     padding: 30px;
 }
+.end2
+{
+    text-align: center;
+    background-color: black;
+    color: white;
+}
